[package]
name = "twitter-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.0"
hmac = "0.12.1"
reqwest = { version = "0.12.4", features = ["json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10.5"
tokio = { version = "1", features = ["full"] }
url = "2.2.2"
thiserror = "1.0.29"
